[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/items/DroppedItem.gd" type="Script" id=1]
[ext_resource path="res://shaders/ReplaceColors.shader" type="Shader" id=2]
[ext_resource path="res://scenes/items/attack/swords/skins/ruby-jagged.png" type="Texture" id=3]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 2 )
shader_param/c_1 = Color( 1, 0, 0, 1 )
shader_param/c_2 = Color( 0, 1, 0, 1 )
shader_param/c_3 = Color( 0, 0, 1, 1 )
shader_param/r_1 = null
shader_param/r_2 = null
shader_param/r_3 = null
shader_param/u_tolerance = null

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 4 )

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.4, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1.4, 1.4 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.4, 1.4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="DroppedItem" type="Node2D" groups=[
"DroppedItem",
]]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
scale = Vector2( 0.143583, 0.143583 )
texture = ExtResource( 3 )

[node name="Area" type="Area2D" parent="."]

[node name="Collision" type="CollisionShape2D" parent="Area"]
shape = SubResource( 2 )

[node name="Anim" type="AnimationPlayer" parent="."]
autoplay = "drop"
anims/drop = SubResource( 3 )
anims/take = SubResource( 4 )
[connection signal="area_entered" from="Area" to="." method="_on_Area_area_entered"]
[connection signal="area_exited" from="Area" to="." method="_on_Area_area_exited"]
[connection signal="animation_finished" from="Anim" to="." method="_on_Anim_animation_finished"]
